syntax = "proto3";
package iobench;

message Empty {}

message PingReply {
  string version = 1;
}

message RunGetRequest {
  string uri  = 1;   // "s3://bucket/prefix/*" or "s3://bucket/prefix/"
  uint32 jobs = 2;   // concurrency per-agent
}

message RunPutRequest {
  string bucket      = 1;
  string prefix      = 2;  // "bench/"
  uint64 object_size = 3;  // bytes
  uint32 objects     = 4;  // number of objects
  uint32 concurrency = 5;  // per-agent parallel uploads
}

message OpSummary {
  uint64 total_bytes = 1;
  double seconds     = 2;
  string notes       = 3;
}

// v0.6.0: Distributed workload execution
message RunWorkloadRequest {
  string config_yaml = 1;          // Full YAML configuration as string
  string agent_id = 2;             // Unique agent identifier (e.g., "agent-1")
  string path_prefix = 3;          // Per-agent path isolation prefix (e.g., "agent-1/")
  int64 start_timestamp_ns = 4;    // Coordinated start time (nanoseconds since UNIX epoch)
  bool shared_storage = 5;         // True if storage is shared (S3/GCS/Azure), false if local per-agent
  
  // v0.8.7: For distributed prepare/cleanup with shared storage
  uint32 agent_index = 6;          // 0-based agent index (0, 1, 2, ...)
  uint32 num_agents = 7;           // Total number of agents in distributed execution
}

message OpAggregateMetrics {
  uint64 bytes = 1;
  uint64 ops = 2;
  uint64 mean_us = 3;
  uint64 p50_us = 4;
  uint64 p95_us = 5;
  uint64 p99_us = 6;
}

// v0.8.18: Per-bucket size tracking for accurate avg_bytes in distributed mode
message SizeBucketData {
  uint32 bucket_idx = 1;  // Bucket index (0-8)
  uint64 ops = 2;         // Number of operations in this bucket
  uint64 bytes = 3;       // Total bytes for operations in this bucket
}

message SizeBins {
  repeated SizeBucketData buckets = 1;
}

message WorkloadSummary {
  string agent_id = 1;
  double wall_seconds = 2;
  uint64 total_ops = 3;
  uint64 total_bytes = 4;
  
  // Per-operation aggregates
  OpAggregateMetrics get = 5;
  OpAggregateMetrics put = 6;
  OpAggregateMetrics meta = 7;
  
  // Overall percentiles (from combined histogram)
  uint64 p50_us = 8;
  uint64 p95_us = 9;
  uint64 p99_us = 10;
  
  // v0.6.4: Agent results collection (inline for small results)
  string console_log = 11;       // Agent console output
  string metadata_json = 12;     // Agent metadata JSON
  string tsv_content = 13;       // TSV results data
  string results_path = 14;      // Local path where agent saved results
  string op_log_path = 15;       // Optional: path to operation log (not transferred)
  
  // v0.6.4: HDR histogram data for accurate aggregation
  bytes histogram_get = 16;      // Serialized GET histograms (all size buckets)
  bytes histogram_put = 17;      // Serialized PUT histograms (all size buckets)
  bytes histogram_meta = 18;     // Serialized META histograms (all size buckets)
  
  // v0.8.18: Per-bucket byte counts for accurate avg_bytes calculation
  SizeBins get_bins = 19;        // Per-bucket ops and bytes for GET
  SizeBins put_bins = 20;        // Per-bucket ops and bytes for PUT
  SizeBins meta_bins = 21;       // Per-bucket ops and bytes for META
  
  // v0.8.22: Per-endpoint statistics for multi-endpoint configurations
  repeated EndpointStatsSnapshot endpoint_stats = 22;
}

// v0.8.22: Per-endpoint statistics snapshot
message EndpointStatsSnapshot {
  string uri = 1;                // Full URI of the endpoint
  uint64 total_requests = 2;     // Total requests to this endpoint
  uint64 bytes_read = 3;         // Total bytes read from this endpoint
  uint64 bytes_written = 4;      // Total bytes written to this endpoint
  uint64 error_count = 5;        // Number of errors on this endpoint
  uint64 active_requests = 6;    // Currently active requests (usually 0 at end)
}

// v0.7.9: Prepare phase summary (similar to WorkloadSummary but for object creation)
message PrepareSummary {
  string agent_id = 1;
  double wall_seconds = 2;
  uint64 objects_created = 3;
  uint64 objects_existed = 4;
  
  // PUT operation aggregates (object creation)
  OpAggregateMetrics put = 5;
  
  // MKDIR operation aggregates (directory creation)
  OpAggregateMetrics mkdir = 6;
  uint64 mkdir_count = 7;
  
  // v0.7.9: HDR histogram data for accurate aggregation
  bytes histogram_put = 8;       // Serialized PUT histograms (all size buckets)
  
  // v0.7.9: TSV content for agent-level prepare results
  string tsv_content = 9;        // Prepare results TSV data
  string results_path = 10;      // Local path where agent saved prepare_results.tsv
  
  // v0.8.18: Per-bucket byte counts for accurate avg_bytes calculation
  SizeBins put_bins = 11;        // Per-bucket ops and bytes for PUT
  
  // v0.8.22: Per-endpoint statistics for multi-endpoint configurations
  repeated EndpointStatsSnapshot endpoint_stats = 12;
}

// v0.8.27: Per-stage summary for incremental results collection
// Sent when a stage completes, before waiting at barrier
// Ensures data is not lost if later stages fail
message StageSummary {
  uint32 stage_index = 1;              // 0-based stage index
  string stage_name = 2;               // Stage name from config (e.g., "prepare", "workload")
  string stage_type = 3;               // Stage type: "prepare", "workload", "cleanup", "custom"
  double wall_seconds = 4;             // Duration of this stage
  
  // Operation counts for this stage
  uint64 get_ops = 5;
  uint64 get_bytes = 6;
  uint64 put_ops = 7;
  uint64 put_bytes = 8;
  uint64 meta_ops = 9;
  uint64 errors = 10;
  
  // Per-operation aggregates
  OpAggregateMetrics get = 11;
  OpAggregateMetrics put = 12;
  OpAggregateMetrics meta = 13;
  
  // HDR histogram data for accurate aggregation across agents
  bytes histogram_get = 14;
  bytes histogram_put = 15;
  bytes histogram_meta = 16;
  
  // Per-bucket byte counts for accurate avg_bytes calculation
  SizeBins get_bins = 17;
  SizeBins put_bins = 18;
  SizeBins meta_bins = 19;
  
  // Per-endpoint statistics
  repeated EndpointStatsSnapshot endpoint_stats = 20;
}

// v0.7.5: Live performance statistics for distributed execution
// Sent every 1 second during workload execution for real-time visibility
message LiveStats {
  string agent_id = 1;
  double timestamp_s = 2;        // Seconds since workload start
  
  // GET operations (read from storage)
  uint64 get_ops = 3;
  uint64 get_bytes = 4;
  double get_mean_us = 5;
  double get_p50_us = 6;
  double get_p95_us = 7;
  
  // PUT operations (write to storage)
  uint64 put_ops = 8;
  uint64 put_bytes = 9;
  double put_mean_us = 10;
  double put_p50_us = 11;
  double put_p95_us = 12;
  
  // META operations (LIST/HEAD/DELETE/etc.)
  uint64 meta_ops = 13;
  double meta_mean_us = 14;
  
  double elapsed_s = 15;
  bool completed = 16;           // True on final message
  
  // v0.7.5: Optional final summary (only present when completed=true)
  // Allows controller to collect complete results for persistence
  WorkloadSummary final_summary = 17;
  
  // v0.7.6: Startup handshake for robust error handling
  enum Status {
    UNKNOWN = 0;
    READY = 1;       // Agent validated config and is ready to start
    RUNNING = 2;     // Workload is executing (normal stats messages)
    ERROR = 3;       // Agent encountered startup error (see error_message)
    COMPLETED = 4;   // Workload finished successfully
    ABORTED = 5;     // Agent gracefully aborted by controller
    ACKNOWLEDGE = 6; // Response to PING command
  }
  Status status = 18;
  string error_message = 19;     // Details if status == ERROR or ABORTED
  
  // v0.7.9: Prepare phase progress tracking (DEPRECATED: use current_stage instead)
  bool in_prepare_phase = 20;    // True if currently in prepare phase
  uint64 prepare_objects_created = 21;  // Objects created so far
  uint64 prepare_objects_total = 22;    // Total objects to create
  
  // v0.7.9: Prepare phase summary (only present when prepare completes)
  PrepareSummary prepare_summary = 23;
  
  // v0.7.11: CPU utilization metrics (sampled every 5 seconds)
  double cpu_user_percent = 24;    // User mode CPU utilization (0-100%)
  double cpu_system_percent = 25;  // System/kernel mode CPU utilization (0-100%)
  double cpu_iowait_percent = 26;  // IO-wait CPU time (0-100%)
  double cpu_total_percent = 27;   // Total CPU utilization (user+system+iowait)
  
  // v0.8.4: Clock synchronization for coordinated start
  // When status=READY, agent includes its current timestamp
  // Controller calculates offset and adjusts start_timestamp_ns accordingly
  int64 agent_timestamp_ns = 28;   // Agent's system time (nanoseconds since UNIX epoch)
  
  // v0.8.4: Sequence number for message tracking and acknowledgment
  // Allows controller to confirm receipt of specific messages (e.g., READY status)
  int64 sequence = 29;
  
  // v0.8.9: Flexible stage system for multi-phase execution
  // Replaces the limited in_prepare_phase bool with a proper stage enum
  // Allows controller to display appropriate progress for each stage
  enum WorkloadStage {
    STAGE_UNKNOWN = 0;    // Unknown/unset (backward compat)
    STAGE_PREPARE = 1;    // Creating objects before workload
    STAGE_WORKLOAD = 2;   // Main benchmark execution (GET/PUT/etc.)
    STAGE_CLEANUP = 3;    // Deleting objects after workload
    STAGE_LISTING = 4;    // v0.8.14: Scanning existing objects before prepare
    STAGE_CUSTOM = 10;    // User-defined custom stage (use stage_name)
  }
  WorkloadStage current_stage = 30;      // Current execution stage
  string stage_name = 31;                // Human-readable stage name (esp. for CUSTOM)
  uint64 stage_progress_current = 32;    // Progress within stage (objects created/deleted, etc.)
  uint64 stage_progress_total = 33;      // Total items for this stage (0 = time-based like workload)
  double stage_elapsed_s = 34;           // Seconds since this stage started
  
  // v0.8.14: Agent concurrency for total thread count display
  uint32 concurrency = 35;               // Number of concurrent workers on this agent
  
  // v0.8.17: Additional latency percentiles for complete perf_log data
  // Proto originally only transmitted p50 and p95, but perf_log needs p90/p99
  double get_p90_us = 36;                // GET p90 latency (microseconds)
  double get_p99_us = 37;                // GET p99 latency (microseconds)
  double put_p90_us = 38;                // PUT p90 latency (microseconds)
  double put_p99_us = 39;                // PUT p99 latency (microseconds)
  double meta_p50_us = 40;               // META p50 latency (microseconds)
  double meta_p90_us = 41;               // META p90 latency (microseconds)
  double meta_p99_us = 42;               // META p99 latency (microseconds)
  
  // v0.8.26: Barrier synchronization fields
  // Agent sets these when waiting at a stage barrier
  bool at_barrier = 43;                  // Agent reached barrier, waiting for release
  string barrier_name = 44;              // Barrier identifier (e.g., "stage-1-prepare")
  uint32 barrier_sequence = 45;          // Monotonic counter for ordering
  
  // v0.8.27: Per-stage summary for incremental results collection
  // Populated when a stage completes (before barrier wait)
  // Controller writes TSV immediately to avoid data loss
  StageSummary stage_summary = 46;
}

service Agent {
  rpc Ping(Empty) returns (PingReply);
  rpc RunGet(RunGetRequest) returns (OpSummary);
  rpc RunPut(RunPutRequest) returns (OpSummary);
  rpc RunWorkload(RunWorkloadRequest) returns (WorkloadSummary);  // v0.6.0
  
  // v0.7.5: Server streaming for live progress updates during distributed execution
  rpc RunWorkloadWithLiveStats(RunWorkloadRequest) returns (stream LiveStats);
  
  // v0.7.11: Abort ongoing workload (controller failure, user interrupt, etc.)
  rpc AbortWorkload(Empty) returns (Empty);
  
  // v0.8.4: Bidirectional streaming for robust control and stats
  // Controller sends control messages (start, abort, ping)
  // Agent sends stats updates (ready, progress, completed)
  // Allows real-time coordination without blocking either side
  rpc ExecuteWorkload(stream ControlMessage) returns (stream LiveStats);
  
  // v0.8.23: Pre-flight validation before workload execution
  // Agent validates filesystem/object storage access and returns detailed errors
  // Controller aggregates results and aborts if any agent fails validation
  rpc PreFlightValidation(PreFlightRequest) returns (PreFlightResponse);
  
  // v0.8.25: Barrier synchronization for phase coordination
  // Agent reports readiness for next phase + sends heartbeat
  rpc ReportBarrierReady(BarrierRequest) returns (BarrierResponse);
  
  // v0.8.25: Controller queries agent when heartbeats missed
  rpc QueryAgentStatus(AgentQueryRequest) returns (AgentQueryResponse);
}

// v0.8.4: Control messages from controller to agent
message ControlMessage {
  enum Command {
    PING = 0;           // Keepalive / connection check
    START = 1;          // Begin workload execution
    ABORT = 2;          // Cancel workload immediately
    ACKNOWLEDGE = 3;    // Acknowledge receipt of agent message
    PREFLIGHT = 4;      // v0.8.23: Run pre-flight validation
    RELEASE_BARRIER = 5; // v0.8.26: Release agents waiting at barrier
    GOODBYE = 6;        // v0.8.29: Graceful disconnect - controller is leaving, agent should return to Idle
    RESET = 7;          // v0.8.60: Force agent back to Idle state (controller/agent desync recovery)
  }
  Command command = 1;
  
  // For START command: workload configuration
  string config_yaml = 2;
  string agent_id = 3;
  string path_prefix = 4;
  int64 start_timestamp_ns = 5;
  bool shared_storage = 6;
  
  // For ACKNOWLEDGE: which message we're acknowledging
  int64 ack_sequence = 7;
  
  // v0.8.7: For distributed cleanup with shared storage
  // agent_index: 0-based agent index (0, 1, 2, ...)
  // num_agents: total number of agents in the distributed execution
  // Used for deterministic object distribution: file_idx % num_agents == agent_index
  uint32 agent_index = 8;
  uint32 num_agents = 9;
  
  // v0.8.26: Barrier release coordination
  // For RELEASE_BARRIER command: which barrier is being released
  string barrier_name = 10;      // e.g., "stage-3-execute" or "prepare"
  uint32 barrier_sequence = 11;  // Monotonic counter for ordering
}

// v0.8.23: Pre-flight validation request/response
message PreFlightRequest {
  string config_yaml = 1;  // Configuration to validate (same as START would receive)
  string agent_id = 2;     // Agent identifier for logging
}

message PreFlightResponse {
  bool passed = 1;                    // true if no errors (warnings OK)
  repeated ValidationResult results = 2;
  int32 error_count = 3;
  int32 warning_count = 4;
  int32 info_count = 5;
}

message ValidationResult {
  ResultLevel level = 1;
  ErrorType error_type = 2;
  string message = 3;
  string suggestion = 4;
  string details = 5;        // Optional technical details (uid/gid, etc)
  string test_phase = 6;     // "stat", "list", "read", "write", "delete", etc.
}

enum ResultLevel {
  RESULT_LEVEL_SUCCESS = 0;
  RESULT_LEVEL_INFO = 1;
  RESULT_LEVEL_WARNING = 2;
  RESULT_LEVEL_ERROR = 3;
}

enum ErrorType {
  ERROR_TYPE_UNKNOWN = 0;
  ERROR_TYPE_AUTHENTICATION = 1;
  ERROR_TYPE_PERMISSION = 2;
  ERROR_TYPE_NETWORK = 3;
  ERROR_TYPE_CONFIGURATION = 4;
  ERROR_TYPE_RESOURCE = 5;
  ERROR_TYPE_SYSTEM = 6;
}

// v0.8.25: Distributed barrier synchronization for phase coordination
// Workload phases for granular state tracking
enum WorkloadPhase {
  PHASE_IDLE = 0;             // Ready to accept new workload
  PHASE_VALIDATING = 1;       // Pre-flight checks running
  PHASE_PREPARE_READY = 2;    // Validation passed, waiting for prepare barrier
  PHASE_PREPARING = 3;        // Creating/cleaning objects
  PHASE_EXECUTE_READY = 4;    // Prepare complete, waiting for execute barrier
  PHASE_EXECUTING = 5;        // Running I/O workload
  PHASE_CLEANUP_READY = 6;    // Execution complete, waiting for cleanup barrier
  PHASE_CLEANING = 7;         // Removing objects
  PHASE_COMPLETED = 8;        // All phases done successfully
  PHASE_FAILED = 9;           // Error occurred
  PHASE_ABORTING = 10;        // Emergency shutdown in progress
}

// v0.8.25: Heartbeat-based progress reporting
message PhaseProgress {
  string agent_id = 1;
  WorkloadPhase current_phase = 2;
  uint64 phase_start_time_ms = 3;
  uint64 heartbeat_time_ms = 4;
  
  // Phase-specific progress fields
  uint64 objects_created = 10;      // Prepare phase
  uint64 objects_total = 11;        // Prepare phase
  string current_operation = 12;    // "creating", "listing", "cleaning", etc.
  uint64 bytes_written = 13;        // Prepare phase
  uint64 errors_encountered = 14;   // Any phase
  
  uint64 operations_completed = 20; // Execute phase
  double current_throughput = 21;   // Execute phase (ops/sec or GB/sec)
  uint64 phase_elapsed_ms = 22;     // Any phase
  
  uint64 objects_deleted = 30;      // Cleanup phase
  uint64 objects_remaining = 31;    // Cleanup phase
  
  // Liveness indicators
  bool is_stuck = 40;               // Agent reports it's stuck (deadlock, etc.)
  string stuck_reason = 41;         // Why agent thinks it's stuck
  double progress_rate = 42;        // Objects/sec or ops/sec (0 = not progressing)
  bool phase_completed = 43;        // Phase finished, ready for barrier
  bool at_barrier = 44;             // Agent reached barrier, waiting for others
}

// v0.8.25: Barrier synchronization request
message BarrierRequest {
  string barrier_id = 1;     // "prepare", "execute", "cleanup"
  string agent_id = 2;
  PhaseProgress progress = 3; // Current progress (embedded heartbeat)
}

message BarrierResponse {
  bool proceed = 1;          // true = barrier satisfied, proceed to next phase
  repeated string waiting_agents = 2;  // Agents not yet at barrier
  repeated string failed_agents = 3;   // Agents that won't reach barrier
  uint64 next_heartbeat_ms = 4;        // When to send next heartbeat
}

// v0.8.25: Explicit agent query (when heartbeats missed)
message AgentQueryRequest {
  string agent_id = 1;
  string reason = 2;  // "missed_heartbeats", "status_check", etc.
}

message AgentQueryResponse {
  PhaseProgress current_progress = 1;
  bool is_alive = 2;
  string status_message = 3;  // Human-readable status
}

